move client libraries into separate plugins

--- a/plugins/cloud9.core/view/ide.tmpl.html
+++ b/plugins/cloud9.core/view/ide.tmpl.html
@@ -44,7 +44,7 @@
 
             var apfLoc = VERSION == FILES
                 ? "[%staticUrl%]/support/apf/apf.js"
-                : "[%staticUrl%]/js/apf_" + VERSION + ".js";
+                : "[%staticUrl%]/apf-packaged/apf_" + VERSION + ".js";
 
             var config = <%requirejsConfig%>;
             require(config, [apfLoc], function(){
