--- a/client/ext/consolehints/consolehints.css
+++ b/client/ext/consolehints/consolehints.css
@@ -15,6 +15,9 @@
     background-color: #000000;
     background: -webkit-gradient(linear,left bottom,left top,rgb(46,48,52),rgb(31,31,31));
     background: -moz-linear-gradient(center bottom,rgb(46,48,52),rgb(31,31,31));
+    
+    height: 400px;
+    overflow-y: scroll;
 }
 
 .barConsoleHints a {
