changed max number of uploads to 20 disable selecting files in tree that are queued for upload styles the 'select files'-button in upload dialog disable dragging to editor when File upload dialog is open added hover/down state for upload button above file tree show upload icon when dragging over file tree

--- a/client/ext/uploadfiles/uploadfiles.css
+++ b/client/ext/uploadfiles/uploadfiles.css
@@ -23,3 +23,12 @@
     width: 245px;
     background: url(/static/ext/uploadfiles/style/images/dragdrop-here-text.png) no-repeat 0 0;
 }
+
+#fileUploadSelect {
+    position: absolute;
+    top: 115px;
+    left: 86px;
+    width: 181px;
+    height: 24px;
+    opacity: 0;
+}
