--- a/client/ext/console/console.css
+++ b/client/ext/console/console.css
@@ -3,7 +3,7 @@
 }
 .console_text div {
     padding: 2px 10px;
-    padding-left: 25px;
+    padding-left: 7px;
 }
 .cli_divider {
     display: block;
@@ -15,16 +15,34 @@
     padding-left: 25px;
 }
 .console_text .console_prompt {
-    padding-left: 25px;   
+    padding-left: 5px;   
 }
 .console_text a:visited {
     color: #909090;
 }
-.console_text .console_prompt:last-of-type {
-    background-image: url(http://a-cdn.apartmenttherapy.com/assets/google-reader-icon-47ebc2ad6b50f61daec777017c88befb.png);
+.console .spinnerHolder {
+    background-image: url(static/style/images/consoleSpinnerProcesses.gif);
     background-repeat: no-repeat;
-    background-position: -0px 0px;
+    background-position: 0px 0px;
+    top: 14px;
+    padding-top: 10px;
 }
+/*
+.console .spinnerHolder.btn_icon_onlyOver {
+    background-image: url(static/style/images/consoleActionCancel.png);
+    background-repeat: no-repeat;
+    background-position: 0px 0px;
+    top: 14px;
+    padding-top: 0px;
+}
+
+.console .spinnerHolder.btn_icon_onlyDown {
+    background-image: url(static/style/images/consoleActionCancel.png);
+    background-repeat: no-repeat;
+    background-position: 0px -21px;
+    top: 14px;
+    padding-top: 0px;
+}*/
 
 .cmd_msg > span { float: left; }
 .cmd_msg > span > span { margin:0 0 0 25px; }
