--- a/client/style/style.css
+++ b/client/style/style.css
@@ -160,6 +160,8 @@ BODY {
     /*border-bottom: 1px solid #b2b2b2;*/
     -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.06) inset;
     -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.06) inset;
+    position: relative;
+    z-index: 999;
 }
 
 .dockcol{
