Madre effing non-packed is working

--- a/server/cloud9/view/ide.tmpl.packed.html
+++ b/server/cloud9/view/ide.tmpl.packed.html
@@ -12,6 +12,7 @@
 
         <script type="text/javascript" src="/[%socketIoUrl%]/socket.io.js"></script>
         <script type="text/javascript" src="[%staticUrl%]/require.js"></script>
+        [%scripts%]
         <script type="text/javascript">
         //<![CDATA[
 
