--- a/server/cloud9/view/ide.tmpl.html
+++ b/server/cloud9/view/ide.tmpl.html
@@ -49,7 +49,7 @@
             var config = <%requirejsConfig%>;
             require(config, [apfLoc], function(){
                 apf.addEventListener("load", function(){
-                    var list = ["core/ide", "core/ext", "core/util", "core/settings", "ext/editors/editors"];
+                    var list = ["core/ide", "core/ext", "core/util", "core/settings", "ext/main/main", "ext/editors/editors"];
                     if (VERSION == RELEASE)
                         list.push("ace/editor");
 
@@ -57,6 +57,14 @@
                     //loader.animateLoader(20);
                     require(list, function(ide, ext, util){
                         var plugins = <%plugins%>;
+
+                        var aceConfig = require("ace/config");
+
+                        aceConfig.set("packaged", true);
+                        aceConfig.set("workerPath", "static/build/worker");
+                        aceConfig.set("modePath", "static/build/mode");
+                        aceConfig.set("themePath", "static/build/theme");
+                        
                         //loader.animateLoader(50);
                         apf.addEventListener("load", function(){
                             //Load extensions
