* Show/Hide Statusbar * open files list should always be blue * Add Project Bar

--- a/server/cloud9/view/ide.tmpl.html
+++ b/server/cloud9/view/ide.tmpl.html
@@ -206,7 +206,7 @@
 
             <a:vbox id="mainRow" padding="0" flex="1" splitters="true">
                 <a:hbox id="hboxMain" padding="0" edge="0" flex="1">
-                    <a:vbox id="navbar" class="black-menu-bar unselectable">
+                    <a:vbox id="navbar" visible="false" class="black-menu-bar unselectable">
 
                     </a:vbox>
                     <a:vbox id="colLeft" width="200" minwidth="150" visible="false" />
