--- a/client/ext/consolehints/consolehints.css
+++ b/client/ext/consolehints/consolehints.css
@@ -13,8 +13,11 @@
     border-width: 1px 1px 0 1px;
 
     background-color: #000000;
-    background: -webkit-gradient(linear,left bottom,left top,rgb(46,48,52),rgb(31,31,31));
-    background: -moz-linear-gradient(center bottom,rgb(46,48,52),rgb(31,31,31));
+    background-image: linear-gradient(bottom, rgb(31,31,31) 0%, rgb(45,47,51) 100%);
+    background-image: -o-linear-gradient(bottom, rgb(31,31,31) 0%, rgb(45,47,51) 100%);
+    background-image: -moz-linear-gradient(bottom, rgb(31,31,31) 0%, rgb(45,47,51) 100%);
+    background-image: -webkit-linear-gradient(bottom, rgb(31,31,31) 0%, rgb(45,47,51) 100%);
+    background-image: -ms-linear-gradient(bottom, rgb(31,31,31) 0%, rgb(45,47,51) 100%);
     
     max-height: 300px;
     overflow: auto;
@@ -22,6 +25,17 @@
     -webkit-box-shadow: inset 0px 1px 0px 0px #3e4041;
     -moz-box-shadow: inset 0px 1px 0px 0px #3e4041;
     box-shadow: inset 0px 1px 0px 0px #3e4041; 
+}
+
+.consoleHintsBg {
+    background-image: url("/static/style/images/noise_pattern_transparent.png");
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;    
+    opacity: 0.3;
+    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=30);
 }
 
 .barConsoleHints a {
