more merge related fixes

--- a/server/cloud9/view/ide.tmpl.packed.html
+++ b/server/cloud9/view/ide.tmpl.packed.html
@@ -28,7 +28,8 @@
                 version: <%version%>,
                 staticUrl: <%staticUrl%>,
                 settings: <%settingsXml%>,
-                socketIoUrl: <%socketIoUrl%>
+                socketIoUrl: <%socketIoUrl%>,
+                settings: <%settingsXml%>
             };
 
             // prevent console messages from crashing our app!
