--- a/client/style/style.css
+++ b/client/style/style.css
@@ -47,7 +47,7 @@ BODY {
     padding : 10px;
     position : absolute;
     left : 0;
-    top : 0; 
+    top : 0;
     right : 0;
     bottom : 0;
     z-index : 100;
@@ -89,13 +89,13 @@ BODY {
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
-    
+
     -webkit-box-shadow: 0px 3px 5px 0px #000000;
     -moz-box-shadow: 0px 3px 5px 0px #000000;
-    box-shadow: 0px 3px 5px 0px #000000; 
-    
+    box-shadow: 0px 3px 5px 0px #000000;
+
     height: 11px;
-    
+
     min-width: 4%;
     margin: 0 auto;
     width: 4%;
@@ -162,13 +162,18 @@ BODY {
     -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.06) inset;
     position: relative;
     z-index: 999;
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .dockcol{
 /*    border-left : 1px solid #333;*/
 /*    -moz-box-shadow: 1px 0 0 rgba(255, 255, 255, 0.8) inset;
     -webkit-box-shadow: 1px 0 0 rgba(255, 255, 255, 0.8) inset;*/
-    
+
     background: -webkit-gradient(linear,left bottom,left top,color-stop(0, #202020),color-stop(1, #2f2f2f));
     background: -moz-linear-gradient(center bottom,#202020 0%, #2f2f2f 100%);
 }
@@ -189,7 +194,7 @@ BODY {
     border-radius         : 0;
 }
 .dockcol .basic {
-    
+
 }
 .dockcol .basic .expand-panel-bg {
     background-image: linear-gradient(bottom, rgb(50,51,54) 0%, rgb(68,69,72) 100%);
@@ -200,7 +205,7 @@ BODY {
     right: -3px
 }
 .dockcol .basic .hbox {
-    
+
 }
 
 .unselectable {
@@ -215,7 +220,7 @@ BODY {
 /**
  * SERVICE SIGNIN BUTTONS
  */
- 
+
 .signin_options {
     margin: 15px 16px 0;
     text-align: right;
@@ -258,7 +263,7 @@ BODY {
     width: 26px;
     height: 24px;
     background:url(images/signin_facebook.png) no-repeat 0 0;
-    
+
     display: inline-block;
     float: right;
     height: 24px;
@@ -275,7 +280,7 @@ BODY {
     width: 26px;
     height: 24px;
     background:url(images/signin_google.png) no-repeat 0 0;
-    
+
     display: inline-block;
     float: right;
     height: 24px;
@@ -292,7 +297,7 @@ BODY {
     width: 26px;
     height: 24px;
     background:url(images/signin_twitter.png) no-repeat 0 0;
-    
+
     display: inline-block;
     float: right;
     height: 24px;
