--- a/server/cloud9/view/ide.tmpl.html
+++ b/server/cloud9/view/ide.tmpl.html
@@ -26,7 +26,7 @@
                 readonly: <%readonly%>,
                 projectName: <%projectName%>,
                 version: <%version%>,
-                staticUrl: <%staticUrl%>,
+                staticUrl: "[%staticUrl%]/",
                 socketIoUrl: <%socketIoUrl%>
             };
 
@@ -61,9 +61,9 @@
                         var aceConfig = require("ace/config");
 
                         aceConfig.set("packaged", true);
-                        aceConfig.set("workerPath", "static/build/worker");
-                        aceConfig.set("modePath", "static/build/mode");
-                        aceConfig.set("themePath", "static/build/theme");
+                        aceConfig.set("workerPath", "/static/build/worker");
+                        aceConfig.set("modePath", "/static/build/mode");
+                        aceConfig.set("themePath", "/static/build/theme");
                         
                         //loader.animateLoader(50);
                         apf.addEventListener("load", function(){
