--- a/server/cloud9/view/ide.tmpl.html
+++ b/server/cloud9/view/ide.tmpl.html
@@ -42,16 +42,14 @@
 
             var VERSION = window.cloud9config.debug ? DEBUG : RELEASE;
 
-            var apfLoc = VERSION == DEBUG
-                ? "[%staticUrl%]/js/apf_debug.js"
-                : "[%staticUrl%]/js/apf_" + VERSION + ".js";
+            var apfLoc = "[%staticUrl%]/js/apf_" + VERSION + ".js";
 
             var config = <%requirejsConfig%>;
             require(config, [apfLoc], function(){
                 apf.addEventListener("load", function(){
                     var list = ["core/ide", "core/ext", "core/util", "core/settings", "ext/main/main", "ext/editors/editors"];
-                    //if (VERSION == RELEASE)
-                        list.push("ace/editor");
+                    
+                    list.push("ace/editor");
 
                     apf.IdeSettings = <%settingsXml%>
                     //loader.animateLoader(20);
