--- a/server/cloud9/view/ide.tmpl.html
+++ b/server/cloud9/view/ide.tmpl.html
@@ -42,7 +42,7 @@
             var DEBUG   = "debug";
             var FILES   = "files";
 
-            var VERSION = window.cloud9config.debug ? FILES : RELEASE;
+            var VERSION = window.cloud9config.debug ? DEBUG : RELEASE;
 
             var apfLoc = VERSION == FILES
                 ? "[%staticUrl%]/support/apf/apf.js"
@@ -50,40 +50,38 @@
 
             var config = <%requirejsConfig%>;
             require(config, [apfLoc], function(){
-                apf.addEventListener("load", function(){
-                    var list = ["core/ide", "core/ext", "core/util", "core/settings", "ext/main/main", "ext/editors/editors"];
-                    if (VERSION == RELEASE)
-                        list.push("ace/editor");
+                var list = ["core/ide", "core/ext", "core/util", 
+                    "core/settings", "ext/main/main", "ext/editors/editors",
+                    "ace/editor"];
 
-                    //loader.animateLoader(20);
-                    require(list, function(ide, ext, util){
-                        var plugins = <%plugins%>;
+                //loader.animateLoader(20);
+                require(list, function(ide, ext, util){
+                    var plugins = <%plugins%>;
 
-                        var aceConfig = require("ace/config");
+                    var aceConfig = require("ace/config");
 
-                        aceConfig.set("packaged", true);
-                        aceConfig.set("workerPath", "/static/build/worker");
-                        aceConfig.set("modePath", "/static/build/mode");
-                        aceConfig.set("themePath", "/static/build/theme");
-                        
-                        //loader.animateLoader(50);
-                        apf.addEventListener("load", function(){
-                            //Load extensions
+                    aceConfig.set("packaged", true);
+                    aceConfig.set("workerPath", "/static/build/worker");
+                    aceConfig.set("modePath", "/static/build/mode");
+                    aceConfig.set("themePath", "/static/build/theme");
+                    
+                    //loader.animateLoader(50);
+                    apf.addEventListener("load", function(){
+                        //Load extensions
 //                            loader.animateLoader(20);
-                            require(plugins, function(){
-                                ide.dispatchEvent("extload", {modules: plugins});
+                        require(plugins, function(){
+                            ide.dispatchEvent("extload", {modules: plugins});
 
-                                console.log("Total Load Time " 
-                                    + (new Date() - window.cloud9config.startdate) + "ms");
+                            console.log("Total Load Time " 
+                                + (new Date() - window.cloud9config.startdate) + "ms");
 
-                                ide.addEventListener("$event.extload", function(cb){
-                                    cb();
-                                });
+                            ide.addEventListener("$event.extload", function(cb){
+                                cb();
                             });
                         });
                     });
-                    preloaderImgs();
                 });
+                preloaderImgs();
                 //if (apf.started)
                 //    apf.onstart();
             });
